--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,53 +3,45 @@
 <head>
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
-</head>
-<style>
-        html, body {
+    <style>
+        /***** Page Background *****/
+        .page-display {
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: flex-start;
-        }
-        .design {
             background-color: #1b1b1b;
             color: white;
-            height: 100%;
         }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20vh;
-        }
+        /***** Functionality *****/
         button {
-            background-color: #ffa31a;
-            height: 50px;
-            width: 200px;
-            border-radius: 20px;
-            font-weight: bold;
-            margin-top: 20px;
+           background-color: #ffa31a;
+           height: 50px;
+           width: 200px;
+           border-radius: 20px;
+           font-weight: bold;
+           margin-top: 20px;
         }
-        .textColor{
+        /***** Titles *****/
+        .page-title {
             color: #ffa31a;
         }
-</style>
-<body class="design">
-<div class="d-flex flex-column bd-highlight justify-content-center align-items-center w-75 ms-5">
-    <h1 class="textColor">Login</h1>
-    <div th:if="${error}">
-        Unable to login. Check your username and password.
-    </div>
-    <p class="textColor">First time? click <a th:href="@{/register}">here</a> to register!</p>
-    <form method="POST" th:action="@{/login}" id="loginForm">
-        <label class="form-label" for="username">Username: </label>
-        <input class="form-control" type="text" name="username" id="username"/>
-        <br/>
-        <label class="form-label" for="password">Password: </label>
-        <input class="form-control" type="password" name="password" id="password"/>
-        <br/>
-        <button type="submit" value="Login">Login</button>
-    </form>
-</div>
-</body>
+    </style>
+</head>
+    <body class="page-display">
+        <div class="d-flex flex-column bd-highlight justify-content-center align-items-center w-75 ms-5">
+            <h1 class="page-title">Login</h1>
+            <div th:if="${error}"> Unable to login. Check your username and password.</div>
+            <p>First time? click <a th:href="@{/register}">here</a> to register!</p>
+                <form method="POST" th:action="@{/login}" id="loginForm">
+                        <label class="form-label" for="username">Username: </label>
+                        <input class="form-control" type="text" name="username" id="username"/>
+                    <br/>
+                        <label class="form-label" for="password">Password: </label>
+                        <input class="form-control" type="password" name="password" id="password"/>
+                    <br/>
+                    <button type="submit" value="Login">Login</button>
+                </form>
+        </div>
+    </body>
 </html>
