--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,49 +3,43 @@
 <head>
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+    <style>
+            /***** Page Background *****/
+            .page-display {
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                background-color: #1b1b1b;
+                color: white;
+            }
+            /***** Functionality *****/
+            button {
+               background-color: #ffa31a;
+               height: 50px;
+               width: 200px;
+               border-radius: 20px;
+               font-weight: bold;
+               margin-top: 20px;
+            }
+            /***** Titles *****/
+            .page-title {
+                color: #ffa31a;
+            }
+    </style>
 </head>
-<style>
-        html, body {
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-        }
-        .design {
-            background-color: #1b1b1b;
-            color: white;
-            height: 100%;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20vh;
-        }
-        button {
-            background-color: #ffa31a;
-            height: 50px;
-            width: 200px;
-            border-radius: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        .textColor{
-            color: #ffa31a;
-        }
-</style>
-<body class="design">
-<div class="d-flex flex-column bd-highlight justify-content-center align-items-center w-75 ms-5">
-    <h1 class="textColor">Register</h1>
-    <form method="POST" th:action="@{/register}" id="registration">
-        <label class="form-label" for="username">Username: </label>
-        <input class="form-control" type="text" name="username" id="username"/>
-        <br/>
-        <label class="form-label" for="password">Password: </label>
-        <input class="form-control" type="password" name="password" id="password"/>
-        <br/>
-        <button type="submit" value="Register">Register</button>
-    </form>
-</div>
-</body>
+    <body class="page-display">
+        <div class="d-flex flex-column bd-highlight justify-content-center align-items-center w-75 ms-5">
+                <h1 class="page-title">Register</h1>
+                    <form method="POST" th:action="@{/register}" id="registration">
+                            <label class="form-label" for="username">Username: </label>
+                            <input class="form-control" type="text" name="username" id="username"/>
+                        <br/>
+                            <label class="form-label" for="password">Password: </label>
+                            <input class="form-control" type="password" name="password" id="password"/>
+                        <br/>
+                            <button type="submit" value="Register">Register</button>
+                    </form>
+        </div>
+    </body>
 </html>
